# csc3380-spring-2024-lectures

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
lecture1/: CMakeLists.txt  README.md
lecture1/code/: count_unique.cpp
lecture10/: CMakeLists.txt  README.md
lecture10/code/: ascii_image.hpp  frame_images.cpp  framed_image.hpp  hcat_images.cpp  rotate_left_images.cpp  vcat_images.cpp  vflip_images.cpp  working_with_queues.cpp
lecture11/: CMakeLists.txt  README.md
lecture11/code/: student_grades.cpp
lecture12/: CMakeLists.txt  README.md
lecture12/code/: list.cpp  list.hpp  list_pool.hpp
lecture13/: CMakeLists.txt  README.md
lecture13/code/: counting_words.cpp  cross_reference.cpp  generating_sentences.cpp  splitting_lines.cpp
lecture14/: CMakeLists.txt  README.md
lecture14/code/: algorithms.cpp  find_urls.cpp  palindromes.cpp  quick_dictionary.cpp  student_grades.cpp  student_grades.txt
lecture15/: CMakeLists.txt  README.md
lecture15/code/: max.cpp  min.cpp  minmax_element.cpp  results.txt  swap.cpp
lecture16/: CMakeLists.txt  README.md
lecture16/code/: Graph.cpp  Simple_window.h  demo.cpp  display_model.cpp  simple_line.cpp
lecture17/: CMakeLists.txt  README.md
lecture17/code/: Graph.h  color_grid.cpp  fltk.h  lines.cpp
lecture19/: CMakeLists.txt  README.md
lecture19/code/: Simple_window.cpp  e_power_x.cpp  functions.cpp
lecture2/: CMakeLists.txt  README.md
lecture2/code/: multiply.cpp  sieve.cpp
lecture20/: CMakeLists.txt  README.md
lecture20/code/: bf_code.cpp  bf_compiler.cpp  bf_compiler_ref.cpp  bf_interpreter.cpp  bf_interpreter_ref.cpp  bf_optimizing_compiler.cpp  bf_optimizing_compiler_ref.cpp
lecture20/examples/: fibonacci.bf  hello_world.bf  mandelbrot.bf  sierpinski.bf
lecture3/: CMakeLists.txt  README.md
lecture3/code/: date_time.cpp  file_system.cpp  lifting_algorithms.cpp  revisiting_io.cpp
lecture4/: CMakeLists.txt  README.md
lecture4/code/: find.cpp  predicates.cpp  vector.cpp
lecture5/: README.md
lecture6/: CMakeLists.txt  README.md
lecture6/code/: calculator.cpp  calculator_flawed.cpp  token.cpp
lecture7/: CMakeLists.txt  README.md
lecture7/code/: calculator.cpp
lecture8/: CMakeLists.txt  README.md
lecture8/code/: catch.hpp  count_operations.hpp  instrumented.cpp  instrumented.hpp  singleton.hpp  test_instrumented_unique.cpp  test_singleton.cpp
lecture8/results/: test_instrumented_unique.txt  test_instrumented_unique.xlsx
lecture9/: CMakeLists.txt  README.md
lecture9/code/: catch.hpp  count_operations.hpp  fibonacci.cpp  fibonacci_benchmark.cpp  fibonacci_instrumented.cpp  fibonacci_logn.cpp  generic_power.cpp  instrumented.cpp  instrumented.hpp  matrix.hpp  multiply.cpp  power.cpp  power.hpp  table_util.hpp
lecture9/results/: fibonacci_benchmark.txt  fibonacci_benchmark.xlsx  fibonacci_instrumented.txt  fibonacci_instrumented.xlsx
midterm-review/: CMakeLists.txt  README.md
midterm-review/code/: question1.cpp  question10.cpp  question12.cpp  question13.cpp  question14.cpp  question3.cpp  question4.cpp  question5.cpp  question7.cpp  question8.cpp
