cmake_minimum_required(VERSION 3.19)
project(spring2024-csc3380-lectures)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(lecture1)
add_subdirectory(lecture2)
add_subdirectory(lecture3)
add_subdirectory(lecture4)
#add_subdirectory(lecture5)
add_subdirectory(lecture6)
add_subdirectory(lecture7)
add_subdirectory(lecture8)
add_subdirectory(lecture9)
add_subdirectory(lecture10)
