cmake_minimum_required(VERSION 3.19)
project(spring2024-csc3380-lectures)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(lecture1)
add_subdirectory(lecture2)
add_subdirectory(lecture3)
add_subdirectory(lecture4)
#add_subdirectory(lecture5)
add_subdirectory(lecture6)
add_subdirectory(lecture7)
add_subdirectory(lecture8)
add_subdirectory(lecture9)
add_subdirectory(lecture10)
add_subdirectory(lecture11)
add_subdirectory(midterm-review)
add_subdirectory(lecture12)
add_subdirectory(lecture13)
add_subdirectory(lecture14)
add_subdirectory(lecture15)
add_subdirectory(lecture16)
add_subdirectory(lecture17)
add_subdirectory(lecture19)
