cmake_minimum_required(VERSION 3.19)
project(spring2024-csc3380-lecture14)

set(CMAKE_CXX_STANDARD 20)

add_executable(quick_dictionary code/quick_dictionary.cpp)
add_executable(palindromes code/palindromes.cpp)
add_executable(find_urls code/find_urls.cpp)
add_executable(student_grades_14 code/student_grades.cpp)
