cmake_minimum_required(VERSION 3.19)

project(spring2024-csc3380-lecture3)

set(CMAKE_CXX_STANDARD 20)

add_executable(date_time code/date_time.cpp)
add_executable(file_system code/file_system.cpp)
add_executable(revisiting_io code/revisiting_io.cpp)
add_executable(lifting_algorithms code/lifting_algorithms.cpp)